--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TaiXiUser</string>
+    <string name="app_name">泰溪生物</string>
 
 
     <string name="userinfo_avatar_transition_name">userinfo_avatar</string>
